--- a/_posts/CS231n/2022-01-10-CS231n_3.md
+++ b/_posts/CS231n/2022-01-10-CS231n_3.md
@@ -1,5 +1,5 @@
 ---
-title : "CS231n 2강 요약"
+title : "CS231n 3강 Loss Function and Optimization"
 category :
     - CS231n
 tag :
@@ -11,242 +11,348 @@ toc_sticky: true
 comments: true
 ---
 
-# Image Classification
+# Loss Function
 
-이미지 분류는 컴퓨터비전에 있어서 주요한 작업으로 <br/> 
-input image에 대하여 어떤 category에 속하는지 결정하는 과정이다.<br/>
+`loss function`이란 손실함수를 의미하며, W가 얼마나 **부정확** 한지 알려주는 함수이다.<br/>
 
-하지만 여러가지 문제점이 존재한다.<br/>
-컴퓨터는 이미지를 볼때 사람과 같이 인식하는 것이 아니라 <br/>
-여러개의 숫자들에 대한 격자판으로 인식하기 때문이다.(숫자들의 집합) <br/>
-이것을 `sematic gap` 이라 일컫는다. <br/>
-
-따라서 이미지 분류에서는 다음과 같은 변화에 상당히 취약하다. <br/>
-
-1. Vewpoint varaition (카메라 위치 변화)
-2. Illumination (조명에 의한 변화)
-3. Deformation (다양한 자세등 객체 변형)
-4. Occulision (가려짐에 의한 변화)
-5. Background Clutter (배경과 유사한 색의 객체)
-6. Intraclass variation (생김새, 크기, 색 등 클래스 내부 분산)
-
-`Image Classification` 에는 크게 2가지 접근법이 있다.
-
-> 1. edge등의 feature를 명시적 규칙집합으로 이해하는 방법
-> 2. Data 중심으로 접근하는 방법
-
-- 명시적 규칙집합에 단점
-  1. 강인(robust) 하지 않음
-  2. 다른 객체에 분류에 대한 확장성이 낮음
+`loss funtion`을 최소화하는 파라미터를 찾는 과정을 `optimization` 이라고 한다.<br/>
 
 
-이러한 문제를 해결하기 위한 방법으로 data 중심 접근 방법이 등장했다.
 
-- Data 중심 접근
-  1. 이미지와 라벨에 대한 데이터셋을 수집
-  2. 머신러닝을 이용하여 classifier를 학습
-  3. 새로운 이미지에 대하여 classifier 성능 평가  
+<img src = "/assets/image/2022-02-07-15-02-03.png" width = "70%" height="70%" >
+ 
+3개의 traning sample이 주어고지고 3개의 클래스가 존재하는 상황에서<br/>
+`loss function`을 구해보자.
 
-
-# K-Nearest Neighbor
-
-`Image Classification`에서 사용하는 알고리즘 종류 중 하나이다.<br/>
-해당 알고리즘은 크게 두 가지 step으로 구성된다.<br/>
-
-1. `train` : 모든 데이터와 라벨을 기억
-2. `predict` : 새로운 input에 대하여 training한 이미지와 가장 유사한 label을 예측
-
-K-NN에서 주요한 파라미터는 크게 두 가지가 있다.
-
-1. `K` : 이웃의 수
-2. `Distance Metric` : 유사도를 측정하는 방식 (L1, L2등)
-
-우선 K에 따른 알고리즘의 차이를 알아보자.
-
-해당 알고리즘은 Distance Metrice을 이용해 가까운 K개의 이웃을 찾고<br/>
-이웃끼리 투표하는 방법이다. 
-
-K=1일때 살펴보면 `가장 가까운 이웃` 만을 보기 때문에 녹색 영역 가운데<br/>
-노란색 영역이 발생하거나, 초록 영역이 파란영역을 침범하는 등의 문제가 발생한다.<br/>
-
-K=3, 5로 늘리게 되면 결정 경계가 더 부드러워지고 더 좋은 결과를 보인다. <br/>
-즉, K수를 높이면 잡음에 강해지는 것을 알 수 있다.
+$$ {
+    f(x, W) = Wx
+}
+$$
 
 
-이때, 레이블링이 안된 흰색 지역은 <br/>
-K-NN이 대다수를 결정할 수 없는 지역이다. 
 
-![](/assets/image/2022-02-01-02-46-01.png)
+앞서 말했다시피 `loss function`이란 W가 얼마나 **부정확** 한지 측정하는 함수이다.<br/>
 
-이번에는 `Distnace Metrice` 에 대해 자세히 알아보자. 
-
-강의에서 소개한 방법은 2가지이다. 이 외에도 다양한 방법이 존재한다.<br/>
-
-1. `L1 distance` 단순히 두 이미지에 거리 차이를 합산하는 방법 <br/>
-   `Manhattan distance` 라고도 부른다.<br/> 
-   좌표계에 의존적인 data 사용시 사용<br/>
-    ex) 각 직원 근속연수, 봉급 등 특징적인 요소
-
- <p align="center">
-
+식으로 나타내면 다음과 같다.
 
 $${
-d1(I_1, I_2) = \displaystyle\sum_{p}\left\lvert I_1^p - I_2^p\right\rvert
-}$$
+L = \frac{1}{N}\sum_{i}{L_i}(f(x_i, W), y_i)
+}
+$$
 
-</p>
+- $L_i$ : 사용할 loss function
+- $x_i$ : 입력 이미지 
+- $y_i$ : 실제 정답 카테고리 (정수) 
+- $W$ : 가중치
+- $f(x_i, W)$ : 예측 값
+- N : 클래스 수 (여기서는 3)
 
-![L1 distance](/assets/image/2022-02-01-02-42-51.png)
+loss function을 이용해 예측값과 레이블의 차이를 더한후 N으로 나누어주면 L값을 구할 수 있다. 
 
-2. `L2 distance` 두 픽셀간 차이의 제곱합의 제곱근을 씌우는 방법<br/>
-   `Euclidean distance` 라고도 부른다.<br/>
-   좌표계에 의존적이지 않을때 사용
+loss의 한 종류인 `SVM loss`에 대하여 좀 더 자세히 알아보자. <br/>
+이미지 내에서 정답을 제외하고 모두 더하면 우리는 `SVM loos`를 구할 수 있다. <br/>
 
-<p align="center">
+$$
+\begin{aligned}
+   
+
+L_i &= \sum_{j \neq y_i} 
+
+   \begin{cases}
+   0 \quad\qquad\qquad(s_{y_i} \geq s_j+1)  \\
+   s_j - s_{y_i} + 1  \quad(otherwise) 
+    \end{cases} \\
+&= \sum_{j neq {y_i}} max(0, s_j - s_{y_i}+1)&
+\end{aligned}
+$$
+여기서 
+$s_1 = cat$ , $s_2 = car$, $s_3 = frog$ 이다. 
+
+우선 고양이를 먼저 살펴보자.<br/>
+cat = 3.2, car=5.1, frog=-1.7을 나타내고 있다.  <br/>
+
+- $3.2 < 5.1 + 1$ 이므로 $L_i = 5.1 + 1 - 3.2 = 2.9$
+- $3.2 \geq  -1.7 + 1$ 이므로 $L_i = 0$
+- $L_1 = 2.9 + 0 = 2.9$
+
+ car를 살펴보면 <br/>
+ cat = 1.3, car =4.9 , frog = 2.0을 나타내고 있다. <br/>
+
+ -  $max(0, 1.3 -4.9 + 1) + max(0, 2.0 -4.9 + 1)$
+ -  $max(0, -2.6) + max(0, -1.9)$
+ -  $L_2 = 0 + 0 = 0$ 
+
+ frog를 살펴보면 <br/>
+ cat = 2.2, car =2.5 , frog = -3.1을 나타내고 있다. <br/>
+
+ -  $max(0, 2.2 +3.1 + 1) + max(0, 2.5 +3.1 + 1)$
+ -  $max(0, 6.3) + max(0, 6.6)$
+ -  $L_3 = 6.3 + 6.6 = 12.9$ 
+
+따라서 최종 Loss인 $L$ 다음과 같다.
+$$
+L = \frac{1}{N}\sum^{N}_{i=1}L_i
+$$
+$$L = (2.9 + 0 + 12.9) / 3 = 5.27$$
 
 
+## Question_1
+1. car의 score가 살짝 변한다면 어떤 일이 발생하는가?
+   > 이미 car의 score가 높기 때문에 loss의 변화는 없다. 
+
+2. loss가 취할 수 있는 최소값과 최대값은?
+   > $$min = 0 and max = \infin $$
+3. W를 초기화 할 때, 모든 s를 0에 근사한다. 이때 loss는 어떻게 되는가?
+   > 클래스의 수 - 1 <br/>
+   트레이닝 처음시작 시 loss가 class - 1이 아니라면 버그가 있는 것. <br/>
+   실제로 디버깅에 유용하게 쓰인다. 
+4. 합을 구할 때 $j= y_i$ 즉, 정답까지 더하면 어떻게 되는가?
+   > loss가 1이 증가한다. ($s_j - s_j + 1 = 1 이 모든 클래스에 추가되기때문$)
+5. sum 대신 mean을 이용하면 어떻게 되는가 ? 
+   > 단순히 손실함수를 rescale 할 뿐. loss겂울 구하는 데는 크게 영향이 없다. <br/>
+   우리는 정답 클래스의 score와 아닌 클래스이 차이에 관심이 있기 때문.
+6. Loss function으로 $L_i = \sum_{j \neq y_i}max(0, s_j - s_{y_i}+1)^2$ 을 사용하면?
+   > 손실함수의 값이 바뀐다. 잘못 작동할 경우와 잘 작동할 경우의 loss값을 가중시킴<br/>
+   손실함수의 주 목적은 얼마나 부정확한가를 측정하는 것임에 주의하자.
+7. L=0으로 만드는 W는 unique한가?
+   > uniqe하지 않다. 다른 W도 존재한다. 예를들면, 2W도 Loss는 0이다.
+
+
+우리는 Multiclass SVM Loss를 Numpy를 이용하면 아주 짧은 code로 구현가능하다.
+$$L_i = \sum_{j \neq y_i}max(0, s_j - s_{y_i}+1)^2$$
+```python
+def L_i_vectorized(x, y, W):
+   scores = W.dot(x)
+   margins = np.maximum(0, scores - scores[y] + 1)
+   margins[y] = 0 # max로 나온 결과에서 정답클래스만 0으로 변경
+                  # 전체 순회 없이 필요한 부분만 0으로 만드는 vectorized 기법
+   loss_i = np.sum(margin)
+   return loss_i
+
+```
+# Regularization
+
+다양한 W중 loss가 0인것을 선택하는 것은 모순이다. <br/>
+오직 갖고 있는 데이터의 loss에 대해서만 신경을 쓴 것이기 때문이다. <br/>
+실제로 트레이닝 데이터에 얼마나 일치하는지는 사실 별로 중요하지 않다.<br/>
+적용은 테스트 데이터에 하기 때문에 트레이닝 데이터에 loss만 신경쓰면 안되는 것이다.
+
+즉, `Regularization`이란 `model`이 `train set`에 정확히 fit하지 않도록<br/>
+**penalty를 부여**해주는 작업이다. <br/>
+
+
+![](/assets/image/2022-02-08-19-36-25.png)<br/>
+단순히 training 데이터에만 일치시킨 경우 <br/>
+![](/assets/image/2022-02-08-19-36-38.png)<br/>
+이 경우 test 데이터에서 불일치가 심하다. (정확한 예측 x)<br/>
+![](/assets/image/2022-02-08-19-36-59.png)<br/>
+우리가 원하는 classifer는 초록색 선이다. <br/>
+
+초록색 선과 같이 분류하기 위해서 우리는 정규화가 필요하다.<br/>
+이는 모델이 좀 더 단순한 W를 고를수 있도록 도와준다. 
+
+ 
 $${
-d2(I_1, I_2) = \sqrt{\sum_{p}(I_1^p - I_2^p)^2}
-}$$
+L(w) = \frac{1}{N}\sum_{i}{L_i}(f(x_i, W), y_i) + \lambda R(W)
+}
+$$
 
-</p>
+해당 강의에서 한 학생이 이러한 질문을 했다. <br/>
+어떻게 $Wx + \lambda R$이 곡선을 직선으로 바꿔준다는 것안가?
 
-아래 이미지를 통해 L1, L2 distance를 사용하는 상황을 시각적으로 확인 가능하다.<br/>
-
-![](/assets/image/2022-02-01-03-00-08.png)
-![](/assets/image/2022-02-01-03-03-33.png)
-
-우리는 사전에 K값과 distance를 사용할지 등을 결정해주어야 하는데 <br/>
-이러한 파라미터를 `Hyperparamter` 라고 부른다.<br/>
-그렇다면 우리는 어떤 K값을 사용하는 것이 좋을까? <br/>
-
-크게 3가지 방법에 대해서 알아보자. 
-
-1. 학습데이터의 정확도와 성능을 최대화 하는 파라미터를 선택
-
-   > 결과부터 말하자면 **절대 해서는 안되는 방법**<br/>
-   > 학습데이터에 없던 새로운 데이터에 대해 좋은 성능을 보장할 수 없다. 
-   > ![](/assets/image/2022-02-01-03-20-19.png)
-
-2. 데이터를 `train`과 `test` set으로 나누어 학습시킨후 가장 성능이 좋은것을 선택
-
-   > 이 방법 역시 **절대 해서는 안되는 방법**<br/>
-   > 머신러닝의 궁극적인 목적은 한 번도 보지 못한 데이터에 대해서 잘 동작하는 것<br/>
-   > 그저 `test set`에서만 잘 동작하는 하이퍼 파라미터를 고른 것일 수 있기 때문<br/>
-   >  ![](/assets/image/2022-02-01-03-20-39.png)
-
-3. 데이터를 `train`, `validation`, `test` set으로 분리후 `validation`에서 가장 좋은것을 선택 후<br/>
-   `test`는 단 한 번만 수행하는 방법 
-
-    > 해당 방법이 가장 권장되는 방법이고 실제로 많이 쓰인다.<br/>
-    >  ![](/assets/image/2022-02-01-03-21-03.png)
-
-4. **Cross-Validation** : `train` 데이터를 여러 부분으로 나눈 뒤 번갈아 가며 `validation`으로 지정<br/>
-   `test` 데이터를 정해놓고 마지막에만 사용하는 방법.
-
-   > 학습 자체가 계산량이 많기 때문에 딥러닝 같은 큰 모델에서는 잘 사용되지 않는다.
-   >  ![](/assets/image/2022-02-01-03-23-28.png)
+교수님의 대답은 이러하다.<br/>
+복잡한 문제이기에 detail 하게 다루지는 않되, <br/>
+일반적으로 모델은 고차 다항식을 이용해서 문제를 풀려고 한다.<br/>
+이때 regression term을 추가하면 모델이 data를 fit할 때 저차 다항식을 선호하도록 한다<br/>
 
 
-지금까지 우리는 K-Nearest Neighbor를 알아보았다.<br/>
-하지만 K-NN은 이미지를 분류함에 있어서 **절대 사용되서는 안된다.**<br/>
-그 이유는 다음과 같다.<br/>
+Regularization의 주요기능은 다음과 같다. 
 
-1. 모든 train에 대한 정보를 가지고 있어야 하므로 매우 느리다.
-2. `Distance Metric`은 픽셀단위에서 별로 유용한 정보가 아니다. (not informative)<br/>
-   ![](/assets/image/2022-02-01-03-27-47.png)
-   해당 이미지는 모두 같은 L2 distnace를 갖는다. 
-3. 차원이 늘어나면 필요한 train data가 기하급수적으로 증가한다. (차원의 저주)
+- 모델이 더 복잡해지는 것을 방지
+- 모델에 soft penaty를 추가 (training 데이터셋에 완전히 일치못하도록 페널티 부여)
+   > 여전히 더 복잡한 모델이 될 가능성 존재<br/>
+<br/>
 
+Regularization은 이 외에도 여러가지가 존재한다. 
+- L1 Regularization
+  > W에 페널티 부과 <br/>
+  $$L = \frac{1}{N}\sum^{N}_{i=1}{L_i}max(0, f(x_i, W)_j -f(x_i, W)_{y_i} +1) + 
+  \lambda R(W)  
+$$
+- L2 Regularization
+  > $$ R(W) = \sum_k\sum_l{W^2{_k,_l}} $$ 
+- Elastic net (L1 + L2)
+- Max Norm Regulariation 
+- Dropout
+- Fancier 
 
+L2 Regularization를 이용해 모델의 복잡도를 측정하는 예시를 살펴보자.<br/>
 
-
-# Linear Classifcation
-
-이제는 `Linear Classfiers`에 대해 알아보자. <br/>
-
-`Linear classifiers` 는 쉽게 설명하자면 `레고 블럭`과 같다. <br/>
-우리는 이 `레고 블럭` 들을 쌓아서 `Neural Network`를 생성할 수 있다. <br/>
-
-앞서 배운 K-NN은 파라미터가 없다. (하이퍼 파라미터는 존재) <br/>
-그저 `training set`을 가지고 있고, 모든 `training set`을 `test time`에 사용할 뿐이다.<br/>
-
-하지만 `Parametric Approach`에서는 트레이닝 데이터의 정보를 요약한후 정보를 `W`에 모아준다. <br/>
-이렇게 하게되면 더 이상 `test time`에서 `training set`이 필요하지 않다. 
-
-![](/assets/image/2022-02-01-03-46-13.png)
-
-해당 방법은 가장 쉬운 모델 설계방법으로 단순히 `W`와 `x`를 곱할 뿐이다. <br/>
-일부 `bias` 를 더하는 경우도 존재한다. 이때는 **데이터와 무관하게** <br/>
-특정 클래스에 **우선권을 부여**한다. 
-ex) 고양이 데이터가 강아지 데이터 보다 많은 경우 - 고양이 클래스 bias 증가 
-
-쉬운 예제를 한번 살펴보자.<br/>
-
-      1. `input imasge`를 열벡터로 펴준다.
-      2. 해당 문제에서는 임의로 정한 `W`가 존재한다. `W` 에 1번에서 만든 열벡터롤 내적해준다.<br/>
-
-    (정확히는 W의 각행은 각 이미지에 대한 템플릿을 의미)<br/>
-    여기서 내적은 클래스 간 템플릿의 유사도를 측정해주는 기능을 한다.<br/>
-
-      3. 내적 결과에 `bias`를 더해준다.<br/>
-
-    bias는 독립적인 데이터로 각 클래스에 scailing factor를 더해주는 것.<br/>
-
- ![](/assets/image/2022-02-01-03-53-38.png)
-
- 하지만 `Linear Classification`에도 문제점이 존재한다. <br/>
- 각 클래스에 대해서 단 하나의 템플릿만 학습가능하다는 점이다. <br/>
- 이렇게 될 경우 풀수 없는 여러가지 문제들이 존재한다. <br/>
-
-![](/assets/image/2022-02-01-03-56-59.png)
-
-비록 `Linear Classifcation`이 풀지 못하는 다양한 문제들이 존재하지만, <br/>
-아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는데 의의가 있다. <br/>
-
-우리는 지금까지 `Linear Classifier`가 어떻게 생겼고 어떻게 동작하는지를 배웠다 <br/>
-아직 어떻게 `W`를 구할수 있는지는 배우지 않았다.<br/>
-다음 시간에는 `Loss function`, `Optimization`, `CNN`에 대해 배울 예정이다.  
-
-# Question
-
-1. N개의 examples을 가지고 있을때, NN-classifier의 train, prediction 함수의 시간복잡도는?
-
-   > `Train` O(1), `Predict` O(N) <br/>
-   > predict단계에서 N개의 학습데이터 전부를 테스트이미지와 비교해야만 하므로<br/>
-   > 상당히 느리다. 우리는 train time은 느리더라도 test time은 빠르길 원한다.<br/>
-
-2. 최적의 하이퍼 파라미터를 찾을때 까지 학습을 다시 시키는 것은 흔한 방법인가?
-
-   > 그때 그때 다르다. 하지만 시간적 여유가 있을때는 권장
+$X = [1, 1, 1, 1,], W_1 = [1, 0 , 0, 0], W_2 = [0,25, 0.25, 0.25, 0.25]$ <br/>
+$f(x) = Wx$ 라고 할 때,
+$W_1x =  W_2x = 1로 $ 모두 결과는 동일하다. <br/>
+하지만, L2 Regularzation에서는 $W_2$를 선호한다. (norm이 더 작기 때문)
 
 
+부가적으로 L1 Regularization은 $w_1$을 선호한다. 
 
-# Summary
 
-## K-NN
+# Softmax Classifier
 
-1.  `Image Classification`은 입력 이미지에 대하여 해당 이미지가 속하는 catergory를 찾는 기법<br/>
-    `training set`은 image와 label을 가지고, `test set`은 input의 label을 예측한다. 
-2.  `K-Nearest Neighbors` classifier는 `training set` 중에서 가장 가까운 샘플을 골라서 label을 예측
-3.  K-NN에서 하이퍼 파라미터는 `Distance Metric`과 `K` 이다.
-4.  `L1 (Manhattan)`는 특징에 의존적일 때 사용, `L2 (Eucleadean)`는 특징에 의존적이지 않을 때 사용
-5.  하이퍼 파라미터를 결정할 때, `Validation set` 을 설정하고, `Test set`은 마지막에 오직 1번만 사용한다.
+앞서 배운 multi-claass `sum loss`에서는 `score` 자체에 대한 해석을 고려하지 않았다.<br/>
 
-## Linear Classification  
+단지 정답 클래스가 정답이 아닌 클래스보다 더 높은 스코어를 내기만을 원했을 뿐이다.<br/>
 
-1. `Linear Classifier`는 `레고 블럭`에 비유가능. `레고 블럭`을 쌓아서 `Nerual Network` 구성
+하지만 `Multinomial Logistic Regression`에서는 `score`에 추가적인 의미를 부여한다.
+<br/>
 
-2. 수식으로 다음과 같이 표현 가능하다.
+이때 사용되는 함수가 `Softmax function`이다. <br/>
 
-   <p align="center"> 
-   ${ 
-      f(x, W) = Wx + b
-   }$ 
-   </p>
+  - `scores`에 지수를 취해 양수가 되도록한다.
+  - 그 지수들의 합으로 다시 정규화
+  - 확률분포를 얻고, 그것이 바로 해당 클래스일 확률이 된다.
+  - 모든 확률의 합은 1이다.
 
-3. `x`는 input 이미지, `W`는 이미지에 대한 요약된 정보. `Wx`는 클래스 간 템플릿의 유사도를 측정하는 연산
 
-4. 각 클래스에 대해서 단 하나의 템플릿만 학습하므로 풀지 못하는 여러 문제가 존재
+$$ L_i = -logP(Y=y_i | X = x_i) $$
 
-5. 아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는 의의가 있다. 
+loss는 얼마나 부정확한지를 측정하므로 -를 붙인다.
+
+softmax를 거치고 나온값에 -log를 취해주면 다음과 같이 나타낼 수 있다.
+
+$$ L_i = -log\frac{e^{s{y_i}}}{\sum_j e^{sj}} $$
+
+말로만 설명하면 이해하기 어렵기 때문에 예제를 한 번 살펴보자.<br/>
+
+![](/assets/image/2022-02-08-20-23-53.png)
+
+3.2 에 exp를 취하면 $e^{3.2} = 24.5$ <br/>
+5.1 에 exp를 취하면 $e^{5.1} = 164.0$ <br/>
+1.7 에 exp를 취하면 $e^{-1.7} = 0.18$ <br/>
+
+합이 1이되도록 normalize를 해주면<br/>
+각각 [0.13, 0.87, 0.00] 이 나온다
+
+$$ L_i = -log\frac{e^{s{y_i}}}{\sum_j e^{sj}} $$
+
+
+이므로 이때 cat에 대한 loss값은 $L_i = -log(0.13) = 0.89$ 이다. 
+
+## Qustion_2
+- $L_i$의 최소값과 최댓값은?
+  > $$ min = 0, max = \infin$$
+- W를 초기화시 s=0에 수렴하는데 이때, loss값은?
+  > $$ -log(\frac{1}{C}) = log C$$
+   하나의 디버깅 전략으로 이용가능 (실제로도 많이 사용하는 방법)
+
+`SVM` 에서의 loss는 `hinge loss` 라고 부른다.<br/>
+`Softmax` 에서의 loss는 `cross-entropy loss` 라고 부른다<br/>
+
+간단히 비교한 그림을 살펴보자.
+
+![](/assets/image/2022-02-08-20-34-04.png)
+
+`SVM`에서는 margin을 신경쓰고 <br/>
+`Softmax`에서는 -log(P(정답클래스)) 를 구한다.<br/>
+
+# Optimization
+어떻게 실제 loss를 줄이는 최적의 W를 찾을수 있을까? <br/>
+해당 과정을 `Opitmization` 이라고 한다. 자세히 살펴보자. <br/>
+
+
+우리가 산속에 있다고 가정해보자 <br/>
+이때, W = 풍경, Loss = 내가 있는 곳의 높이 로 비유할 수 있다. <br/>
+Loss는 W에 따라 변함에 유의하자. 
+
+오래전부터 `Opitmization`에 관한 연구가 이어져왔고 다양한 전략이 존재한다. <br/>
+
+첫번째 전략은 `Random Serach`이다. <br/>
+임의로 샘플링한 W들을 엄청 많이 모아놓고 Loss를 계산해서 <br/>
+어떤 W가 좋은지 탐색하는 방법이다. <br/>
+
+하지만 이 방법은 **절대 사용해서는 안된다.**
+
+그 이유중 하나는 정확도가 아주 낮기 때문이다. 
+
+두번째 전략은 `Follow the slope`이다. <br/>
+`slope` 는 어떤 함수에 대한 미분값을 의마한다. <br/>
+
+$$\frac{df(x)}{dx} = \lim_{h\rarr0}\frac{f(x+h)-f(x)}{h}$$
+
+각 점에서 gradeint를 계산하는 방법으로 **Numercial gradeint** 라고 부른다. <br/>
+
+즉, 어떠한 점에서 gradient를 구한다면 그 점에서의 loss에 대한 기울기를 구할 수 있다.<br/>
+이러한 방법을 `Gradient Descent` 라고 부른다. <br/>
+![](/assets/image/2022-02-08-20-49-35.png)
+
+하지만, 모든 점에대해 gradient를 구하는 것은 쉬운일이 아니다. <br/>
+또한 data의 수가 많아지면 연산량이 매우 많아진다. <br/>
+
+따라서 우리는 여러한 점을 하나의 배치로 묶어서 배치단위로 계산한다.<br/>
+이것을 `Stochastic Gradient`라고 부른다. 뒤에서 조금 더 자세히 다뤄보자. 
+
+위 방법에서는 gradient를 직접 계산하고 있다. <br/>
+각각의 점에대한 gradient를 **직접 계산하는 것이 아니라** <br/>
+**미분식을 이용** 하면 보다 정확하고 빠르게 구할 수 있다. <br/>
+이것이 세번째 전략이다.  (**analytic gradient**)
+
+이 방법을 `Stochastic Gradient Descent`라 한다. 
+
+정리하면 
+- `Numercial gradeint` : 근사값, 느림, 작성하기 쉬움
+- `Analytic gradient` : 정확함, 빠름, 오류발생 가능
+
+
+조금 더 자세히 알아보자. 
+## Gradient Descent
+
+$$ L(W) = \frac{1}{N} \sum_{i=1}^{N}L_i(x_i, y_i, W) + \lambda R(W)$$
+```python
+while True:
+   # W를 임의의 값으로 초기화 후 loss, gradient를 계산한다.
+   # 이후 가중치를 gradient 반대 방향(-)으로 update 한다. 
+   weights_grad = evalutate_gradient(loss_fun, data, weights)
+   weigths += -step_size * weights_grad 
+```
+
+## Stochastic Gradient Descent(SGD)
+
+$$ \nabla_W L(W) = \frac{1}{N} \sum_{i=1}^{N} \nabla_W L_i(x_i, y_i, W) + \lambda \nabla_W  R(W)$$
+
+```python
+while True:
+   # 전체 dataset의 gradeint, loss 계산 x => minibatch의 gradient, loss 계산 (2의 거듭제곱)
+   data_batch = sample_training_data(data, 256)
+   weights_grad = evaluate_gradient(loss_fun, data_batch weights)
+   weights += - step_size * weights_grad  
+```
+
+
+# Image Features vs ConvNets
+![](/assets/image/2022-02-08-21-25-50.png)
+
+2장에서 설명했듯이 기존에 deep learning이 존재하기 전에는 <br/>
+이미지를 처리할때 주로 feature를 직접 추출해서 사용했다.<br/>
+현재는 Nueral Network에 input으로 넘겨주는 방식을 주로 이용한다. 
+
+## Image Features 기법
+
+- 이미지의 여러가지 특징 표현을 계산
+  > 특징 표현들을 연결시켜 하나의 특징벡터 생성
+- Motivation
+  > 비선형 데이터를 극좌표계로 변환하면 linear classifer로 분리가능
+- Color Histogram
+  > 이미지에서 Hue값만 뽑아 모든 픽셀을 각 양동이에 저장<br/>
+  한 픽셀은 해당하는 색의 양동이에 넣고 각 양동이에 들어있는 픽셀 개수를 count
+- Histogram of Oreiented Gradients (HoG)
+- Bag of Words
+  > NLP에서 영감을 얻음, 발생빈도를 이용. <br/>
+   이미지를 임의로 조각하고 군집화하는 과정을 거침<br/>
+   image를 encoding
+
+## ConvNets 
+ConvNet은 5장에서 자세히 다루도록 한다. <br/>
+다만 ConvNet에서는 Feature를 추출하는 과정이 생략되고 <br/>
+Nueral Network가 알아서 학습하는데 가장 큰 차이가 있다.
+
+
