--- a/_posts/CS231n/2022-01-10-CS231n_3.md
+++ b/_posts/CS231n/2022-01-10-CS231n_3.md
@@ -354,6 +354,6 @@ while True:
 ## ConvNets 
 ConvNet은 5장에서 자세히 다루도록 한다. <br/>
 다만 ConvNet에서는 Feature를 추출하는 과정이 생략되고 <br/>
-Nueral Network가 알아서 학습하는데 가장 큰 차이가 있다.
+Neural Network가 알아서 학습하는데 가장 큰 차이가 있다.
 
 
