--- a/_posts/CS231n/2022-01-11-CS231n_4.md
+++ b/_posts/CS231n/2022-01-11-CS231n_4.md
@@ -11,242 +11,264 @@ toc_sticky: true
 comments: true
 ---
 
-# Image Classification
+# Computational Graph
+지난 시간에 우리는 `Gradient Descent`에 대해 배웠다. <br/>
+`Gradient Descent`란 가장 loss가 낮은 곳을 찾기위한 방법이고 `optimization`을 위해<br/> 
+사용되는 기법이다.
 
-이미지 분류는 컴퓨터비전에 있어서 주요한 작업으로 <br/> 
-input image에 대하여 어떤 category에 속하는지 결정하는 과정이다.<br/>
+출력값을 알고있을 때, 그때의 gradient를 이용하면 입력값의 gradient도 계산이 가능하다.<br/>
+즉 결과로부터 입력의 gradient를 계산하므로 `Backpropagation(역전파)` 라고 부른다.
 
-하지만 여러가지 문제점이 존재한다.<br/>
-컴퓨터는 이미지를 볼때 사람과 같이 인식하는 것이 아니라 <br/>
-여러개의 숫자들에 대한 격자판으로 인식하기 때문이다.(숫자들의 집합) <br/>
-이것을 `sematic gap` 이라 일컫는다. <br/>
+이해를 돕기위해 그래프를 이용하는데 이것을 `Computational Graph`라고 한다.
 
-따라서 이미지 분류에서는 다음과 같은 변화에 상당히 취약하다. <br/>
+수학적인 내용이 나오나, 크게 어렵지 않으므로 천천히 완벽하게 이해해볼 것을 추천한다.
 
-1. Vewpoint varaition (카메라 위치 변화)
-2. Illumination (조명에 의한 변화)
-3. Deformation (다양한 자세등 객체 변형)
-4. Occulision (가려짐에 의한 변화)
-5. Background Clutter (배경과 유사한 색의 객체)
-6. Intraclass variation (생김새, 크기, 색 등 클래스 내부 분산)
+`Computational Graph`를 이해하는 것은 앞으로 딥러닝관련 공부함에 있어 아주 기초가 되기 때문에 
 
-`Image Classification` 에는 크게 2가지 접근법이 있다.
+반드시 정확하게 이해하고 넘어가자.
 
-> 1. edge등의 feature를 명시적 규칙집합으로 이해하는 방법
-> 2. Data 중심으로 접근하는 방법
+$$ 
+f(x, y, z) = (x+y)z
+$$
 
-- 명시적 규칙집합에 단점
-  1. 강인(robust) 하지 않음
-  2. 다른 객체에 분류에 대한 확장성이 낮음
+다음과 같은 식이 있을때,<br/>
+x = -2, y = 5, z= -4 라고 하자.<br/>
 
+해당 연산을 그래프로 표현하면 다음과 같다. 
+![](/assets/image/2022-02-09-15-18-03.png)
 
-이러한 문제를 해결하기 위한 방법으로 data 중심 접근 방법이 등장했다.
+x 와 y를  덧셈노드로 묶어준뒤에 해당 결과를 z와 곱셈노드로 묶어준 것이 f 이다.
 
-- Data 중심 접근
-  1. 이미지와 라벨에 대한 데이터셋을 수집
-  2. 머신러닝을 이용하여 classifier를 학습
-  3. 새로운 이미지에 대하여 classifier 성능 평가  
+역전파 역시 해당 계산그래프에 표현이 가능하다. <br/>
 
+역전파를 위해 우리는 `Chain Rule`을 정확히 이해할 필요가있다.
 
-# K-Nearest Neighbor
+`Chain Rule`을 적용하기 위해 우리는 변수 `q`를 도입한다.
+이때, 
+$$ q = x+y \qquad \frac{\partial q}{\partial x} = 1, \frac{\partial q}{\partial y} = 1
+$$
 
-`Image Classification`에서 사용하는 알고리즘 종류 중 하나이다.<br/>
-해당 알고리즘은 크게 두 가지 step으로 구성된다.<br/>
+`f` 를 `q`를 이용해 다시 표현하면 
+$$
+f= qz \qquad \frac{\partial f}{\partial q} = z , \frac{\partial f}{\partial z} = q
+$$
 
-1. `train` : 모든 데이터와 라벨을 기억
-2. `predict` : 새로운 input에 대하여 training한 이미지와 가장 유사한 label을 예측
+우리가 알고 싶은 내용은 입력에 대한 gradient이다. 즉,
+$$ \frac{\partial f}{\partial x} , \frac{\partial f}{\partial y} , \frac{\partial f}{\partial z} 
+$$
 
-K-NN에서 주요한 파라미터는 크게 두 가지가 있다.
+결과 f를 알때, 입력에 대한 gradient를 구하는 과정 (Backpropagation)을 <br/>
+천천히 계산 그래프에 나타내보자.
 
-1. `K` : 이웃의 수
-2. `Distance Metric` : 유사도를 측정하는 방식 (L1, L2등)
+![](/assets/image/2022-02-09-15-30-10.png)
 
-우선 K에 따른 알고리즘의 차이를 알아보자.
+우선 ${ \frac{\partial f}{ \partial z}}$ = x + y 이므로 -2 + 5 = 3 임을 쉽게 구할수 있다.<br/>
 
-해당 알고리즘은 Distance Metrice을 이용해 가까운 K개의 이웃을 찾고<br/>
-이웃끼리 투표하는 방법이다. 
 
-K=1일때 살펴보면 `가장 가까운 이웃` 만을 보기 때문에 녹색 영역 가운데<br/>
-노란색 영역이 발생하거나, 초록 영역이 파란영역을 침범하는 등의 문제가 발생한다.<br/>
+![](/assets/image/2022-02-09-15-34-23.png) <br/>
+그 다음은 ${ \frac{\partial f}{\partial q}= z}$ 이므로 -4 가 된다.  
 
-K=3, 5로 늘리게 되면 결정 경계가 더 부드러워지고 더 좋은 결과를 보인다. <br/>
-즉, K수를 높이면 잡음에 강해지는 것을 알 수 있다.
+이제 순서대로 ${\frac{\partial f}{ \partial y}}$ , ${\frac{\partial f}{ \partial x}}$ 를 구해보면  <br/>
 
+$$\frac{\partial f}{ \partial y} = \frac{\partial f}{ \partial q} \frac{\partial q}{ \partial y} = z * 1 = -4 $$
+$$\frac{\partial f}{ \partial x} = \frac{\partial f}{ \partial q} \frac{\partial q}{ \partial x} = z * 1 = -4 $$
 
-이때, 레이블링이 안된 흰색 지역은 <br/>
-K-NN이 대다수를 결정할 수 없는 지역이다. 
+임을 알 수 있다.  <br/>
 
-![](/assets/image/2022-02-01-02-46-01.png)
+우리는 이것을 단순히 `chain rule`을 적용해 구한다기 보다는 <br/>
+관점의 변화를 통해 보다 쉽게 이해할 수 있다. <br/>
 
-이번에는 `Distnace Metrice` 에 대해 자세히 알아보자. 
+![](/assets/image/2022-02-09-15-39-27.png)
 
-강의에서 소개한 방법은 2가지이다. 이 외에도 다양한 방법이 존재한다.<br/>
+신경망 전체에서 일부를 따온 그림이다. <br/>
 
-1. `L1 distance` 단순히 두 이미지에 거리 차이를 합산하는 방법 <br/>
-   `Manhattan distance` 라고도 부른다.<br/> 
-   좌표계에 의존적인 data 사용시 사용<br/>
-    ex) 각 직원 근속연수, 봉급 등 특징적인 요소
+해당 부분만 지켜보았을때 우리는 입력 `x`와 `y`를 받아 `f`라는 함수를 거친다. <br/>
 
- <p align="center">
+`f` 함수를 거치면 `z` 라는 출력값이 나온다. 
 
+`f`를 기준으로 `local gradient`를 구하면 출력값은 `z`이고 각 입력에 대해 (여기서는 x,y) `gradient`를
 
-$${
-d1(I_1, I_2) = \displaystyle\sum_{p}\left\lvert I_1^p - I_2^p\right\rvert
-}$$
+구하는 것으로 ${ \frac{\partial z}{\partial x} }$, ${ \frac{\partial L}{\partial y} }$ 가 f의 `local gradeint`가 된다. 
 
-</p>
+그림의 맨 뒤에서 부터 `backpropagation` 과정을 살펴보면 `z`를 기준으로 `gradient`를 구하게 된다.
 
-![L1 distance](/assets/image/2022-02-01-02-42-51.png)
+`L(Local gradient의 약자)`은 상류로부터 흘러온 gradient값이라고 이해하면 된다.
 
-2. `L2 distance` 두 픽셀간 차이의 제곱합의 제곱근을 씌우는 방법<br/>
-   `Euclidean distance` 라고도 부른다.<br/>
-   좌표계에 의존적이지 않을때 사용
+`z`를 기준으로 `gradient`를 구하면 ${ \frac{\partial L}{\partial z} }$ 가 되고
 
-<p align="center">
+이 값이 역전파를 통해 하류로 흐르게 된다. 
 
+따라서 `x`와 `y`를 기준으로 `gradient`를 구하게 되면 
 
-$${
-d2(I_1, I_2) = \sqrt{\sum_{p}(I_1^p - I_2^p)^2}
-}$$
+$$ \frac{\partial L}{\partial x}  =  \frac{\partial L}{\partial z}\frac{\partial z}{\partial x}$$
+$$ \frac{\partial L}{\partial y} = \frac{\partial L}{\partial z} \frac{\partial z}{\partial x} $$
 
-</p>
+가 된다. 자세히 살펴보면 `local gradient`에 상류로부터 흘러들어온 `grdient`를 곱해준 값이다. <br/>
 
-아래 이미지를 통해 L1, L2 distance를 사용하는 상황을 시각적으로 확인 가능하다.<br/>
+따라서 계산그래프를 통해 gradient를 구하는 과정에서 `gradient` 값은 해당 노드를 기준으로 구한 
 
-![](/assets/image/2022-02-01-03-00-08.png)
-![](/assets/image/2022-02-01-03-03-33.png)
+`local gradient` 에 `upstream gradient`를 곱해주는 과정을 통해 손쉽게 구할 수 있다. 
 
-우리는 사전에 K값과 distance를 사용할지 등을 결정해주어야 하는데 <br/>
-이러한 파라미터를 `Hyperparamter` 라고 부른다.<br/>
-그렇다면 우리는 어떤 K값을 사용하는 것이 좋을까? <br/>
 
-크게 3가지 방법에 대해서 알아보자. 
+지금까지의 과정이 잘 이해되지 않는 다면 잠시 멈추고 손으로 직접 계산해보고
 
-1. 학습데이터의 정확도와 성능을 최대화 하는 파라미터를 선택
+확실이 이해하고 넘어가는 것이 중요하다. 
+
+## 연습문제 
+$$ f (w , x) = \frac{1}{1+e^{-(w_0x_0 + w_1x_1 + w_2x_2)}} $$
+
+잠시 멈추고 해당 식에대해 직접 `computational graph`를 그리고 각각의 `gradient`를 구해보자.
+
+앞선 내용을 이해했다면 아주 손쉽게 정답을 구할 수 있다. 
+
+우선 계산그래프를 그리면 다음과 같다. 
+
+![](/assets/image/2022-02-09-16-01-44.png)
+
+
+맨 뒤에서 부터 차례대로 gradient 값을 계산해 나가보자.
+
+ - ${\frac{\partial f}{\partial f} = 1.00 }$
+ - 1/x 노드는 ${q(x) = \frac{1}{x}}$ 
+   > 이때, local gradient는 ${\frac{-1}{x^2}}$, 입력값 = 1.37 이므로 ${\frac{-1}{1.37^2} = -0.53}$<br/>
+    `local gradient` * `upstream gradient` = -0.53 * 1 = -0.53
+ - +1 노드는 q(x) = x + 1 
+   > 이때, local gradient는 1이된다. <br/>
+   `local gradient` * `upstream gradient` = 1 * -0.53 = -0.53
+ - exp 노드는 ${q(x) = e^x}$ 
+   > 이때, local gradient = ${e^x}$ , 입력값 -1.00 이므로 ${e^{-1} }$<br/>
+    `local gradient` * `upstream gradient` = ${e^-1}$ * -0.53 = -0.20
+ - *-1 노드는 $q(x) = -x$
+   > 이때, local gradient = -1 <br/>
+    `local gradient` * `upstream gradient` = -1 * -0.20 = 0.20
+ -  `+` 노드는 q(x,y) = x + y ${\frac{\partial q}{\partial x} = 1.00}$, ${\frac{\partial q}{\partial y} = 1.00 }$ <br/>
+    > ${\frac{\partial f}{\partial w_2} =}$ `local gradient` * `upstream gradient` = 1 * 0.20 = 0.20 <br/>
+    > 위로 역전파시 `local gradient` * `upstream gradient` = 1.00 * 0.20 = 0.20
+ -  이후 나오는 마찬가지로`+` 노드는 q(x,y) = x + y ${\frac{\partial q}{\partial x} = 1.00}$, ${\frac{\partial q}{\partial y} = 1.00 }$ <br/>
+    > 즉, 덧셈노드는 값을 그대로 전파함을 알 수 있고, 따라서 각  bracnh로 0.20 전파
+- 아래 `*` 노드는 q(x, y) = x * y, ${\frac{\partial q}{\partial x} = y}$, ${\frac{\partial q}{\partial y} = x }$  <br/>
+   > 따라서 아래로 역전파시  <br/>
+   ${\frac{\partial f}{\partial x_1} =}$ `local gradient` * `upstream gradient` = -3.00 * 0.20 = -0.60 <br/>
+   > 위로 역전파시 <br/>
+    ${\frac{\partial f}{\partial w_1} =}$  `local gradient` * `upstream gradient` = -2.00 * 0.20 = -0.40 <br/>
 
-   > 결과부터 말하자면 **절대 해서는 안되는 방법**<br/>
-   > 학습데이터에 없던 새로운 데이터에 대해 좋은 성능을 보장할 수 없다. 
-   > ![](/assets/image/2022-02-01-03-20-19.png)
+- 위 `*` 노드는 q(x, y) = x * y, ${\frac{\partial q}{\partial x} = y}$, ${\frac{\partial q}{\partial y} = x }$  <br/>
+   > 따라서 아래로 역전파시  <br/>
+   ${\frac{\partial f}{\partial x_0} =}$ `local gradient` * `upstream gradient` = 2.00 * 0.20 = 0.40 <br/>
+   > 위로 역전파시 <br/>
+    ${\frac{\partial f}{\partial w_0} =}$  `local gradient` * `upstream gradient` = -1.00 * 0.20 = -0.20 <br/>
+ 
 
-2. 데이터를 `train`과 `test` set으로 나누어 학습시킨후 가장 성능이 좋은것을 선택
+ 
+ 우리는 이 과정을 통해 어느정도 직관을 기를수 있다. <br/>
+ -  `add` gate : `upstream`의 값을 그대로 흘려준다.
+ -  `mul` gate : `upsteram`의 값에 상대방 branch 값을 곱해준다. 
+  
+위 식에는 나오지 않았지만 `max` gate는 max에겐 값을 통과시키고 아닌 값엔 0을 흘려준다.<br/>
 
-   > 이 방법 역시 **절대 해서는 안되는 방법**<br/>
-   > 머신러닝의 궁극적인 목적은 한 번도 보지 못한 데이터에 대해서 잘 동작하는 것<br/>
-   > 그저 `test set`에서만 잘 동작하는 하이퍼 파라미터를 고른 것일 수 있기 때문<br/>
-   >  ![](/assets/image/2022-02-01-03-20-39.png)
+강의에서는 각각 3개의 gate를 다음과 같이 표현한다. 
+![](/assets/image/2022-02-09-17-13-22.png)
 
-3. 데이터를 `train`, `validation`, `test` set으로 분리후 `validation`에서 가장 좋은것을 선택 후<br/>
-   `test`는 단 한 번만 수행하는 방법 
+## 정리
+지금까지의 내용을 정리하면 우리는 인접한 노드들과 결과노드의 gradient값을 알면<br/>
+`local gradient` * `upstream gradient` 를 통해 손쉽게 입력값에 대한 미분값을 구할 수 있다.<br/>
 
-    > 해당 방법이 가장 권장되는 방법이고 실제로 많이 쓰인다.<br/>
-    >  ![](/assets/image/2022-02-01-03-21-03.png)
 
-4. **Cross-Validation** : `train` 데이터를 여러 부분으로 나눈 뒤 번갈아 가며 `validation`으로 지정<br/>
-   `test` 데이터를 정해놓고 마지막에만 사용하는 방법.
+위 과정을 확장하면 Vector에 대해서도 적용가능하다. 
 
-   > 학습 자체가 계산량이 많기 때문에 딥러닝 같은 큰 모델에서는 잘 사용되지 않는다.
-   >  ![](/assets/image/2022-02-01-03-23-28.png)
+![](/assets/image/2022-02-09-17-18-43.png)
 
+조금 어려울 수 있지만 강의내용을 따라 하나씩 적어보면 이해할 수 있을 것이다.
 
-지금까지 우리는 K-Nearest Neighbor를 알아보았다.<br/>
-하지만 K-NN은 이미지를 분류함에 있어서 **절대 사용되서는 안된다.**<br/>
-그 이유는 다음과 같다.<br/>
+지금까지 배운 `Computational Graph`를 `forward` 와 `backward`로 구성된 Module로 표현가능하다. 이렇게하면 쉽게 각각의 API를 사용가능하다. 
 
-1. 모든 train에 대한 정보를 가지고 있어야 하므로 매우 느리다.
-2. `Distance Metric`은 픽셀단위에서 별로 유용한 정보가 아니다. (not informative)<br/>
-   ![](/assets/image/2022-02-01-03-27-47.png)
-   해당 이미지는 모두 같은 L2 distnace를 갖는다. 
-3. 차원이 늘어나면 필요한 train data가 기하급수적으로 증가한다. (차원의 저주)
+```python
 
+class ComputationalGraph(object):
+   #...
+   def forward(inputs): # forward는 input값에 함수를 적용해 위로 흘려보내는것.
+      # 1. [pass inputs to input gates...]
+      # 2. forward the computational graph:
+      for gate in self.graph.nodes_topologically_sorted():
+         gate.forward()
+      return loss # the final gate in the graph outputs the loss
+   def backward():
+      for gate in reversed(self.graph.nodes_topologically_sorted()):
+         gate.backward() # little piece of backprop (chain rule applied) 
+      return inputs_gradients
+```
 
+위 logic을 적용한 `*` gate는 아래와 같이 표현가능하다. 
+```python 
+class MultiplyGate(object):
+   def forward(x, y):
+      z = x*y
+      return z
+   def backward(dz):
+      dx = self.y * dz
+      dy = self.x * dz
+      return [dx, dy]
+```
 
 
-# Linear Classifcation
+강의에서는 총 3개의 assignment를 제공하는데 이에 대한 내용도 <br/>
+추후에 포스팅 할 예정이다. <br/>
 
-이제는 `Linear Classfiers`에 대해 알아보자. <br/>
+첫번째 과제에서 나오는 내용아 SVM과 Softmax를 작성하는 것인데, <br/>
+여기서 오늘 배운 `forward` 와 `backward`  를 이용하면 된다. 
 
-`Linear classifiers` 는 쉽게 설명하자면 `레고 블럭`과 같다. <br/>
-우리는 이 `레고 블럭` 들을 쌓아서 `Neural Network`를 생성할 수 있다. <br/>
+## Summary
+- `forward` : 뉴럴 네트워크 모델의 입력층부터 출력층까지 순서대로 변수들을 계산하고 저장하는 것
+- `backward` : 뉴럴 네트워크의 파라미터들에 대한 그래디언트(gradient)를 계산하는 방법<br/>
+   > 입력값을 가지고 loss function에 대한 gradient를 계산하기위해 chain rule을 적용한다.
 
-앞서 배운 K-NN은 파라미터가 없다. (하이퍼 파라미터는 존재) <br/>
-그저 `training set`을 가지고 있고, 모든 `training set`을 `test time`에 사용할 뿐이다.<br/>
+# Neural Networks
+앞서 우리는 선형분류기에 대하여 배웠다.
+$$f=Wx$$
 
-하지만 `Parametric Approach`에서는 트레이닝 데이터의 정보를 요약한후 정보를 `W`에 모아준다. <br/>
-이렇게 하게되면 더 이상 `test time`에서 `training set`이 필요하지 않다. 
+이번 장에서는 2개의 layer를 가진 신경망에 대해 학습한다. 
+$$ f = W_2max(0, W_1x) $$
 
-![](/assets/image/2022-02-01-03-46-13.png)
+![](/assets/image/2022-02-09-17-40-56.png)
 
-해당 방법은 가장 쉬운 모델 설계방법으로 단순히 `W`와 `x`를 곱할 뿐이다. <br/>
-일부 `bias` 를 더하는 경우도 존재한다. 이때는 **데이터와 무관하게** <br/>
-특정 클래스에 **우선권을 부여**한다. 
-ex) 고양이 데이터가 강아지 데이터 보다 많은 경우 - 고양이 클래스 bias 증가 
+${h = W_1x}$ 로 ${W_1}$의 score value를 의미한다. 이 값은 비선형이다. 
 
-쉬운 예제를 한번 살펴보자.<br/>
+$$ f = W_3max(W_2max(0, W_1x)) $$
+행렬곱 중간에 비선형 함수와 함께 선형 레이어를 여러개 쌓아 계산하는 방법으로 <br/>
+layer의 개수를 확장해 나갈 수 있다. 
 
-      1. `input imasge`를 열벡터로 펴준다.
-      2. 해당 문제에서는 임의로 정한 `W`가 존재한다. `W` 에 1번에서 만든 열벡터롤 내적해준다.<br/>
+우리가 학습하고 있는 신경망 모델은 말 그대로 생명체의 신경망을 모티브로 하였다.
 
-    (정확히는 W의 각행은 각 이미지에 대한 템플릿을 의미)<br/>
-    여기서 내적은 클래스 간 템플릿의 유사도를 측정해주는 기능을 한다.<br/>
+![](/assets/image/2022-02-09-17-45-06.png)
 
-      3. 내적 결과에 `bias`를 더해준다.<br/>
+어느정도 생물학적 신경망과 비슷한 부분이 있지만, 그 기능이 정확히 일치하지는 않는다.<br/>
+따라서 다음 사항을 주의하여야한다. 
 
-    bias는 독립적인 데이터로 각 클래스에 scailing factor를 더해주는 것.<br/>
+ - 정말 다양한 구조가 있다.
+ - Dendrite가 linear한 계산이 아닌 non-linear computations도 수행될 수 있다.
+ - Synapses는 하나의 weight가 아니라 복잡한 dynamical한 system일 수 있다.
+ - 우리가 activation function을 통해서 얻은 rate들이 적절하지 않을 수 있다.
 
- ![](/assets/image/2022-02-01-03-53-38.png)
+## Activation functions
 
- 하지만 `Linear Classification`에도 문제점이 존재한다. <br/>
- 각 클래스에 대해서 단 하나의 템플릿만 학습가능하다는 점이다. <br/>
- 이렇게 될 경우 풀수 없는 여러가지 문제들이 존재한다. <br/>
+활성함수에 대해서는 추후에 다룰 예정으로, 강의에서는 잠깐 소개만 하고 넘어간다.
+![](/assets/image/2022-02-09-17-48-00.png)
 
-![](/assets/image/2022-02-01-03-56-59.png)
 
-비록 `Linear Classifcation`이 풀지 못하는 다양한 문제들이 존재하지만, <br/>
-아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는데 의의가 있다. <br/>
+## Nueral Networks : Architecture
 
-우리는 지금까지 `Linear Classifier`가 어떻게 생겼고 어떻게 동작하는지를 배웠다 <br/>
-아직 어떻게 `W`를 구할수 있는지는 배우지 않았다.<br/>
-다음 시간에는 `Loss function`, `Optimization`, `CNN`에 대해 배울 예정이다.  
+![](/assets/image/2022-02-09-17-49-16.png)
 
-# Question
+왼쪽 그림과 같은 구조를 `2-layer Nerual Net` 또는 `1-hidden-layer Neural Net`이라 한다.
+오른쪽 그림과 같은 구조를 `3-layer Nerual Net` 또는 `2-hidden-layer Neural Net`이라 한다.
 
-1. N개의 examples을 가지고 있을때, NN-classifier의 train, prediction 함수의 시간복잡도는?
+이때, 마지막 `hidden layer`와 `output layer` 를 연결하는 layer를 `Fully-Connected layer`라고 부른다. 
 
-   > `Train` O(1), `Predict` O(N) <br/>
-   > predict단계에서 N개의 학습데이터 전부를 테스트이미지와 비교해야만 하므로<br/>
-   > 상당히 느리다. 우리는 train time은 느리더라도 test time은 빠르길 원한다.<br/>
 
-2. 최적의 하이퍼 파라미터를 찾을때 까지 학습을 다시 시키는 것은 흔한 방법인가?
+## Summary 
 
-   > 그때 그때 다르다. 하지만 시간적 여유가 있을때는 권장
+- 뉴런을 Fully-Conneted layers로 배열한다.
+- layer의 `abstraction`은 좋은 속성을 가진다.
+   > 행렬과 같이 vectorized code로 표현가능
+- 신경망은 생물학적 신경망과 완전히 동일하지는 않다. 
 
-
-
-# Summary
-
-## K-NN
-
-1.  `Image Classification`은 입력 이미지에 대하여 해당 이미지가 속하는 catergory를 찾는 기법<br/>
-    `training set`은 image와 label을 가지고, `test set`은 input의 label을 예측한다. 
-2.  `K-Nearest Neighbors` classifier는 `training set` 중에서 가장 가까운 샘플을 골라서 label을 예측
-3.  K-NN에서 하이퍼 파라미터는 `Distance Metric`과 `K` 이다.
-4.  `L1 (Manhattan)`는 특징에 의존적일 때 사용, `L2 (Eucleadean)`는 특징에 의존적이지 않을 때 사용
-5.  하이퍼 파라미터를 결정할 때, `Validation set` 을 설정하고, `Test set`은 마지막에 오직 1번만 사용한다.
-
-## Linear Classification  
-
-1. `Linear Classifier`는 `레고 블럭`에 비유가능. `레고 블럭`을 쌓아서 `Nerual Network` 구성
-
-2. 수식으로 다음과 같이 표현 가능하다.
-
-   <p align="center"> 
-   ${ 
-      f(x, W) = Wx + b
-   }$ 
-   </p>
-
-3. `x`는 input 이미지, `W`는 이미지에 대한 요약된 정보. `Wx`는 클래스 간 템플릿의 유사도를 측정하는 연산
-
-4. 각 클래스에 대해서 단 하나의 템플릿만 학습하므로 풀지 못하는 여러 문제가 존재
-
-5. 아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는 의의가 있다. 
