--- a/_posts/CS231n/2022-01-10-CS231n_3.md
+++ b/_posts/CS231n/2022-01-10-CS231n_3.md
@@ -10,7 +10,7 @@ toc : true
 toc_sticky: true
 comments: true
 ---
-
+손실함수와 최적화에 대하여 알아보자
 # Loss Function
 
 `loss function`이란 손실함수를 의미하며, W가 얼마나 **부정확** 한지 알려주는 함수이다.<br/>
