--- a/_posts/CS231n/2022-01-12-CS231n_5.md
+++ b/_posts/CS231n/2022-01-12-CS231n_5.md
@@ -10,243 +10,266 @@ toc : true
 toc_sticky: true
 comments: true
 ---
+CNN에 대하여 알아보자<br/>
 
-# Image Classification
+## Convolitional Neural Network
 
-이미지 분류는 컴퓨터비전에 있어서 주요한 작업으로 <br/> 
-input image에 대하여 어떤 category에 속하는지 결정하는 과정이다.<br/>
+2006년에 Hinton과 Salakhutdnov에 의하여 DNN의 가능성이 제시되었다. <br/>
+2012년에는 NN 열풍이 불었고 음성인식에서 좋은 성능을 발휘하였다. <br/>
+또한 2012년에 `AlexNet`이 CNN의 현대화를 이루었다. <br/>
 
-하지만 여러가지 문제점이 존재한다.<br/>
-컴퓨터는 이미지를 볼때 사람과 같이 인식하는 것이 아니라 <br/>
-여러개의 숫자들에 대한 격자판으로 인식하기 때문이다.(숫자들의 집합) <br/>
-이것을 `sematic gap` 이라 일컫는다. <br/>
+이후 CNN은 다양한 분야에서 적용되어 사용되었고 빠른 발전을 이루고 있다. <br/>
 
-따라서 이미지 분류에서는 다음과 같은 변화에 상당히 취약하다. <br/>
+앞서 배운 신경망에는 `Fully Connected Layer`가 사용되었다. 
 
-1. Vewpoint varaition (카메라 위치 변화)
-2. Illumination (조명에 의한 변화)
-3. Deformation (다양한 자세등 객체 변형)
-4. Occulision (가려짐에 의한 변화)
-5. Background Clutter (배경과 유사한 색의 객체)
-6. Intraclass variation (생김새, 크기, 색 등 클래스 내부 분산)
+`FC Layer`는 어떤 벡터를 가지고 연산을 한 뒤에 일자로 쭉 펴주는 역할을 한다. <br/>
 
-`Image Classification` 에는 크게 2가지 접근법이 있다.
 
-> 1. edge등의 feature를 명시적 규칙집합으로 이해하는 방법
-> 2. Data 중심으로 접근하는 방법
+예를들어 32x32x3 image가 input으로 들어오면 3072 x 1로 쭉 펴주는 것이다. 
 
-- 명시적 규칙집합에 단점
-  1. 강인(robust) 하지 않음
-  2. 다른 객체에 분류에 대한 확장성이 낮음
+![](/assets/image/2022-02-14-18-16-49.png)
 
+하지만 `Convolution Layer`에서는 기존 입력의 구조를 보존시켜준다. 이것이 FC와 CN Layer의 가장 큰 차이이다.
 
-이러한 문제를 해결하기 위한 방법으로 data 중심 접근 방법이 등장했다.
+FC에서는 32 x 32 x 3 입력 이미지를 `height` x `width` x `depth`로 인식한다. 
 
-- Data 중심 접근
-  1. 이미지와 라벨에 대한 데이터셋을 수집
-  2. 머신러닝을 이용하여 classifier를 학습
-  3. 새로운 이미지에 대하여 classifier 성능 평가  
+입력 이미지는 `filter`를 거치는데 필터 역시 `height` x `width` x  `depth`로 구성된다.
 
+일반적으로 입력이미지와 필터는 정사각형 크기를 사용하기 때문에 `hegiht` = `width`이고,
 
-# K-Nearest Neighbor
+필터를 거친 입력이미지는 `filter`의 `depth`만큼 확장된다.
 
-`Image Classification`에서 사용하는 알고리즘 종류 중 하나이다.<br/>
-해당 알고리즘은 크게 두 가지 step으로 구성된다.<br/>
+필터는 이미지를 좌측상단에서 순차적으로 우측하단에 도달할때 까지 슬라이딩된다.
 
-1. `train` : 모든 데이터와 라벨을 기억
-2. `predict` : 새로운 input에 대하여 training한 이미지와 가장 유사한 label을 예측
+즉, 이미지를 슬랑이딩 하면서 공간적으로 내적을 수행하는 것이다.
 
-K-NN에서 주요한 파라미터는 크게 두 가지가 있다.
+이때 내적수행을 위해 우리는 W를 길게 펴게된다. 
 
-1. `K` : 이웃의 수
-2. `Distance Metric` : 유사도를 측정하는 방식 (L1, L2등)
+즉, 32x32x3 image와 5x5x3 filter가 있을때 필터는 w의 가중치를 가지고있으면
+$$W^Tx+b$$
+와 같이 나타낼 수 있다. 
 
-우선 K에 따른 알고리즘의 차이를 알아보자.
+입력이미지가 필터를 거치고난 결과물을 `activation map` 이라고 부른다.
 
-해당 알고리즘은 Distance Metrice을 이용해 가까운 K개의 이웃을 찾고<br/>
-이웃끼리 투표하는 방법이다. 
+![](/assets/image/2022-02-14-18-23-45.png)
 
-K=1일때 살펴보면 `가장 가까운 이웃` 만을 보기 때문에 녹색 영역 가운데<br/>
-노란색 영역이 발생하거나, 초록 영역이 파란영역을 침범하는 등의 문제가 발생한다.<br/>
+일반적으로 conv layer에서는 여러개의 필터를 사용하는데 이러한 결과물들을 모은것을<br/>
+`activation maps`라 부른다.
 
-K=3, 5로 늘리게 되면 결정 경계가 더 부드러워지고 더 좋은 결과를 보인다. <br/>
-즉, K수를 높이면 잡음에 강해지는 것을 알 수 있다.
+필터를 여러개 사용하는 이유는 필터마다 다른 특징을 추출하고 싶기 때문이다. 
 
+예를들면 우리가 6개의 5x5 `filters`를 가지고 있다면 
 
-이때, 레이블링이 안된 흰색 지역은 <br/>
-K-NN이 대다수를 결정할 수 없는 지역이다. 
+우리는 6개의 activation map을 얻을 수 있다. 
 
-![](/assets/image/2022-02-01-02-46-01.png)
+![](/assets/image/2022-02-14-18-26-21.png)
 
-이번에는 `Distnace Metrice` 에 대해 자세히 알아보자. 
+즉, 입력이미지 32x32x3은 필터들을 거치고 28x28x6이 된다. 
 
-강의에서 소개한 방법은 2가지이다. 이 외에도 다양한 방법이 존재한다.<br/>
+여기서 6은 필터의 개수를 의마한다. 32가 28이 된 이유는 뒤에서 자세히 다룬다.
 
-1. `L1 distance` 단순히 두 이미지에 거리 차이를 합산하는 방법 <br/>
-   `Manhattan distance` 라고도 부른다.<br/> 
-   좌표계에 의존적인 data 사용시 사용<br/>
-    ex) 각 직원 근속연수, 봉급 등 특징적인 요소
+`ConvNet`은 `conv latyr`가 여러개 쌓인 네트워크이다. 그 사이사이엔 `activation functions`가 들어간다. 
 
- <p align="center">
+![](/assets/image/2022-02-14-18-29-38.png)
 
+정리하면 
+- 각 layer는 여러개의 필터를 가지고
+- 각 필터마다 각각의 `activation map`을 생성한다.
+- 따라서 여러개의 layer들을 쌓고 나서 보면 
+- 결국 각 필터들이 계층적으로 학습하는 것을 볼 수 있다. 
 
-$${
-d1(I_1, I_2) = \displaystyle\sum_{p}\left\lvert I_1^p - I_2^p\right\rvert
-}$$
+`ConvNet`에서 layer의 계층에 따라 단순/복잡한 특징들이 존재한다.
 
-</p>
+layer가 얕을땐 단순한 특징들을 학습하고, 깊어질수록 복잡한 특징들을 학습한다.
 
-![L1 distance](/assets/image/2022-02-01-02-42-51.png)
+![](/assets/image/2022-02-14-18-31-04.png)
 
-2. `L2 distance` 두 픽셀간 차이의 제곱합의 제곱근을 씌우는 방법<br/>
-   `Euclidean distance` 라고도 부른다.<br/>
-   좌표계에 의존적이지 않을때 사용
+`ConvNet`은 일반적으로 다음과 같은 구조를 갖는다.
 
-<p align="center">
+![](/assets/image/2022-02-14-18-33-05.png)
 
+입력이미지는 여러 레이러를 통과하는데
 
-$${
-d2(I_1, I_2) = \sqrt{\sum_{p}(I_1^p - I_2^p)^2}
-}$$
+첫 `conv layer`를 통과이후 `non-linear layer`를 통과한다.
+> `conv` -> `ReLU`
 
-</p>
+이러한 패턴을 반복하다가 `Pooling layer`를 거친다. <br/>
+`pooling layer`는 `activation maps` **사이즈를 감소**시키는 역할을 한다. 
+> `conv` -> `ReLU` -> `conv` -> `ReLU` -> `Pooling layer`
 
-아래 이미지를 통해 L1, L2 distance를 사용하는 상황을 시각적으로 확인 가능하다.<br/>
+최종단계에서는 `FC Layer`를 거친다.
+> `conv` -> `ReLU` -> `conv` -> `ReLU` -> `Pooling layer`-> <br/>
+> `conv` -> `ReLU` -> `conv` -> `ReLU` -> `Pooling layer`-> <br/>
+> `conv` -> `ReLU` -> `conv` -> `ReLU` -> `Pooling layer`-> <br/>
+> `FC Layer`
 
-![](/assets/image/2022-02-01-03-00-08.png)
-![](/assets/image/2022-02-01-03-03-33.png)
+## CNN 연산과정 
 
-우리는 사전에 K값과 distance를 사용할지 등을 결정해주어야 하는데 <br/>
-이러한 파라미터를 `Hyperparamter` 라고 부른다.<br/>
-그렇다면 우리는 어떤 K값을 사용하는 것이 좋을까? <br/>
+CNN이 어떻게 `spatial dimension` 특징을 잘 유지시키는지 좀 더 자세히 알아보자.
 
-크게 3가지 방법에 대해서 알아보자. 
+![](/assets/image/2022-02-14-18-38-10.png)
 
-1. 학습데이터의 정확도와 성능을 최대화 하는 파라미터를 선택
+다음과 같이 7x7 입력이미지와 3x3 filter가 존재할때 우리는 필터를
 
-   > 결과부터 말하자면 **절대 해서는 안되는 방법**<br/>
-   > 학습데이터에 없던 새로운 데이터에 대해 좋은 성능을 보장할 수 없다. 
-   > ![](/assets/image/2022-02-01-03-20-19.png)
+우측으로 슬라이딩하면서 연산을 진행하게 된다. 
 
-2. 데이터를 `train`과 `test` set으로 나누어 학습시킨후 가장 성능이 좋은것을 선택
+![](/assets/image/2022-02-14-18-38-57.png)
 
-   > 이 방법 역시 **절대 해서는 안되는 방법**<br/>
-   > 머신러닝의 궁극적인 목적은 한 번도 보지 못한 데이터에 대해서 잘 동작하는 것<br/>
-   > 그저 `test set`에서만 잘 동작하는 하이퍼 파라미터를 고른 것일 수 있기 때문<br/>
-   >  ![](/assets/image/2022-02-01-03-20-39.png)
+최대 오른쪽으로 5번 슬라이딩 할 수 있고 아래로도 5번 이동할 수 있기 때문에
 
-3. 데이터를 `train`, `validation`, `test` set으로 분리후 `validation`에서 가장 좋은것을 선택 후<br/>
-   `test`는 단 한 번만 수행하는 방법 
+출력은 5x5가된다. 
 
-    > 해당 방법이 가장 권장되는 방법이고 실제로 많이 쓰인다.<br/>
-    >  ![](/assets/image/2022-02-01-03-21-03.png)
+## stride
 
-4. **Cross-Validation** : `train` 데이터를 여러 부분으로 나눈 뒤 번갈아 가며 `validation`으로 지정<br/>
-   `test` 데이터를 정해놓고 마지막에만 사용하는 방법.
+이때 슬라이딩 하는 보폭을 `stride`라고 한다. 
 
-   > 학습 자체가 계산량이 많기 때문에 딥러닝 같은 큰 모델에서는 잘 사용되지 않는다.
-   >  ![](/assets/image/2022-02-01-03-23-28.png)
+![](/assets/image/2022-02-14-18-39-48.png)
 
+다시 7x7 input을 3x3 filter를 가지고 stride 2로 움직여보자.
 
-지금까지 우리는 K-Nearest Neighbor를 알아보았다.<br/>
-하지만 K-NN은 이미지를 분류함에 있어서 **절대 사용되서는 안된다.**<br/>
-그 이유는 다음과 같다.<br/>
+![](/assets/image/2022-02-14-18-40-29.png)
+![](/assets/image/2022-02-14-18-40-37.png)
+![](/assets/image/2022-02-14-18-40-49.png)
 
-1. 모든 train에 대한 정보를 가지고 있어야 하므로 매우 느리다.
-2. `Distance Metric`은 픽셀단위에서 별로 유용한 정보가 아니다. (not informative)<br/>
-   ![](/assets/image/2022-02-01-03-27-47.png)
-   해당 이미지는 모두 같은 L2 distnace를 갖는다. 
-3. 차원이 늘어나면 필요한 train data가 기하급수적으로 증가한다. (차원의 저주)
+다음과 같이 우리는 오른쪽으로 3번 아래쪽으로 3번 이동할 수 있다.
 
+따라서 출력은 3x3이 된다. 
 
+하지만 stride가 3이라면 어떨까?
 
+이 부분은 직접해보면 7x7 input에서는 정확히 fit하지 않음을 알 수 있다. 
 
-# Linear Classifcation
+앞서 진행한 과정을 공식으로 만들어보자.
 
-이제는 `Linear Classfiers`에 대해 알아보자. <br/>
+- N = 입력 차원
+- F = 필터 사이즈 
+$$ Output Size = (N-F)/stride + 1$$
 
-`Linear classifiers` 는 쉽게 설명하자면 `레고 블럭`과 같다. <br/>
-우리는 이 `레고 블럭` 들을 쌓아서 `Neural Network`를 생성할 수 있다. <br/>
+e.g. N=7, F=3:
+- stride 1 => (7-3)/1 + 1 = 5 <br/>
+- stride 2 => (7-3)/2 + 1 = 3 <br/>
+- stride 3 => (7-3)/3 + 1 = 2.33 (불가능)
 
-앞서 배운 K-NN은 파라미터가 없다. (하이퍼 파라미터는 존재) <br/>
-그저 `training set`을 가지고 있고, 모든 `training set`을 `test time`에 사용할 뿐이다.<br/>
+## padding
 
-하지만 `Parametric Approach`에서는 트레이닝 데이터의 정보를 요약한후 정보를 `W`에 모아준다. <br/>
-이렇게 하게되면 더 이상 `test time`에서 `training set`이 필요하지 않다. 
+앞서 `conv layer`의 연산방법과 `stride`에 대해 배웠다.
 
-![](/assets/image/2022-02-01-03-46-13.png)
+이번엔 `padding`이란 개념에 대해 알아보자.
 
-해당 방법은 가장 쉬운 모델 설계방법으로 단순히 `W`와 `x`를 곱할 뿐이다. <br/>
-일부 `bias` 를 더하는 경우도 존재한다. 이때는 **데이터와 무관하게** <br/>
-특정 클래스에 **우선권을 부여**한다. 
-ex) 고양이 데이터가 강아지 데이터 보다 많은 경우 - 고양이 클래스 bias 증가 
+`padding`이란 테두리에 일정한 값을 채워넣는 것이다. 
 
-쉬운 예제를 한번 살펴보자.<br/>
+보통 `zero-padding`을 많이 사용하는데 테두리에 0을 채워넣으면 된다.
 
-      1. `input imasge`를 열벡터로 펴준다.
-      2. 해당 문제에서는 임의로 정한 `W`가 존재한다. `W` 에 1번에서 만든 열벡터롤 내적해준다.<br/>
+![](/assets/image/2022-02-14-18-47-50.png)
 
-    (정확히는 W의 각행은 각 이미지에 대한 템플릿을 의미)<br/>
-    여기서 내적은 클래스 간 템플릿의 유사도를 측정해주는 기능을 한다.<br/>
+위와 같이 `zero-padding`추가시 어떻게 될까?
 
-      3. 내적 결과에 `bias`를 더해준다.<br/>
+입력이미지가 크기가 2만큼 증가했다.
 
-    bias는 독립적인 데이터로 각 클래스에 scailing factor를 더해주는 것.<br/>
+즉 (N-F) / stride + 1 에서 (N-F + 2) / stride + 1로 변경된 것이다.
 
- ![](/assets/image/2022-02-01-03-53-38.png)
+7x7 input , 3x3 fitler, stride 1, 1 zero-padding
 
- 하지만 `Linear Classification`에도 문제점이 존재한다. <br/>
- 각 클래스에 대해서 단 하나의 템플릿만 학습가능하다는 점이다. <br/>
- 이렇게 될 경우 풀수 없는 여러가지 문제들이 존재한다. <br/>
+(7 - 3 + 2 ) / 1 + 1 = 7
 
-![](/assets/image/2022-02-01-03-56-59.png)
+따라서 출려사이즈는 7x7 이 된다.
 
-비록 `Linear Classifcation`이 풀지 못하는 다양한 문제들이 존재하지만, <br/>
-아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는데 의의가 있다. <br/>
+그렇다면 제로 패딩을 사용하는 이유는 무엇일까?
 
-우리는 지금까지 `Linear Classifier`가 어떻게 생겼고 어떻게 동작하는지를 배웠다 <br/>
-아직 어떻게 `W`를 구할수 있는지는 배우지 않았다.<br/>
-다음 시간에는 `Loss function`, `Optimization`, `CNN`에 대해 배울 예정이다.  
+출력사이즈를 주의깊게 보면 힌트를 얻을수 있는데
 
-# Question
+바로 **입력사이즈의 크기를 유지**시켜준다는 것이다. 
 
-1. N개의 examples을 가지고 있을때, NN-classifier의 train, prediction 함수의 시간복잡도는?
+그렇다면 여기서 하나의 의문을 가질 수 있다.
 
-   > `Train` O(1), `Predict` O(N) <br/>
-   > predict단계에서 N개의 학습데이터 전부를 테스트이미지와 비교해야만 하므로<br/>
-   > 상당히 느리다. 우리는 train time은 느리더라도 test time은 빠르길 원한다.<br/>
+Q. `zero-padding` 추가시 모서리에 필요없는 특징을 추가하게 되는것이 아닌가?
+> A. 우리가 얻고싶은 값은 영상내에 모서리 부분이고, zero-padding을 통해 기존에 <br/>
+> 필터가 닿지 않던 모서리 부분에서도 값을 뽑을 수 있게된다. 
 
-2. 최적의 하이퍼 파라미터를 찾을때 까지 학습을 다시 시키는 것은 흔한 방법인가?
+padding을 추가하여 공식을 확장해보자.
 
-   > 그때 그때 다르다. 하지만 시간적 여유가 있을때는 권장
 
+- N = 입력 차원
+- F = 필터 사이즈 
+- P = padding 수 
 
+$$ (N - F + 2 * P) / stride + 1 $$ 
 
-# Summary
+e.g. N=7, stride = 1:
+- F = 3 => P = 1 <br/>
+- F = 5 => P = 2 <br/>
+- F = 7 => P = 3 
 
-## K-NN
+zero padding을 사용하는 이유는 **입력 이미지의 크기 보존**인 점에 유의하자
 
-1.  `Image Classification`은 입력 이미지에 대하여 해당 이미지가 속하는 catergory를 찾는 기법<br/>
-    `training set`은 image와 label을 가지고, `test set`은 input의 label을 예측한다. 
-2.  `K-Nearest Neighbors` classifier는 `training set` 중에서 가장 가까운 샘플을 골라서 label을 예측
-3.  K-NN에서 하이퍼 파라미터는 `Distance Metric`과 `K` 이다.
-4.  `L1 (Manhattan)`는 특징에 의존적일 때 사용, `L2 (Eucleadean)`는 특징에 의존적이지 않을 때 사용
-5.  하이퍼 파라미터를 결정할 때, `Validation set` 을 설정하고, `Test set`은 마지막에 오직 1번만 사용한다.
+Filter 사이즈가 3일때는 P=1, 5일때는 P=2, 7일때는 P=3으로 해주어야 
 
-## Linear Classification  
+입력 이미지의 크기가 보존된다. 
 
-1. `Linear Classifier`는 `레고 블럭`에 비유가능. `레고 블럭`을 쌓아서 `Nerual Network` 구성
+![](/assets/image/2022-02-14-18-58-19.png)
 
-2. 수식으로 다음과 같이 표현 가능하다.
+제로패딩을 사용하지 않으면 출력사이즈는 아주 빠르게 줄어든다.
 
-   <p align="center"> 
-   ${ 
-      f(x, W) = Wx + b
-   }$ 
-   </p>
+이것은 정보손실을 야기할 수 있고, 원본 이미지를 표현하기 힘들어진다.
 
-3. `x`는 input 이미지, `W`는 이미지에 대한 요약된 정보. `Wx`는 클래스 간 템플릿의 유사도를 측정하는 연산
+따라서 제로패딩을 적절히 사용하는 것은 아주 중요하다.
 
-4. 각 클래스에 대해서 단 하나의 템플릿만 학습하므로 풀지 못하는 여러 문제가 존재
+## Question
+1번.
 
-5. 아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는 의의가 있다. 
+![](/assets/image/2022-02-14-18-59-27.png)
+
+2번.
+
+![](/assets/image/2022-02-14-19-01-16.png)
+
+## Answer
+1번.
+![](/assets/image/2022-02-14-19-06-10.png)
+
+2번.
+![](/assets/image/2022-02-14-19-05-55.png)
+> parms의 개수는 Wx + b 를 생각해보면 쉽게 구할 수 있다. <br/>
+> 5x5 filter가 input의 depth 3만큼 존재하고 bias가 1개 존재하므로 <br/>
+> 5 x 5 x 3 + 1 = 76
+> 이러한 필터가 총 10장 존재하므로 정답은 760
+
+
+## 1x1 Convoutuin Layers
+
+1x1 conv layer는 아주 중요한 역할을 한다. 
+
+이것은 입력의 전체 depth에 대한 내적을 수행하는 것과 같다.
+
+![](/assets/image/2022-02-14-19-11-24.png)
+
+56 x 56 x 64 input과 32 1 x 1 x 64 filters가 주어졌을때,
+
+output size는 
+
+(56-1) / 1 + 1 = 56 
+
+56 x 56 x 32 가 된다. (32는 filter 개수를 의미)
+
+## Receptive Field
+
+`Receptive Filed` : 한 뉴런이 한번에 수용할 수 있는 영역 
+ > 가령 5x5 filter 가 존재한다면 한 뉴런의 `receptive filed`는 5x5 이다. 
+
+ ## Pooling Layer
+
+ `Pooling layer` : representation을 작게 만들어준다. 
+ > 각각의 activation map에서 독립적으로 작용한다 <br/>
+   - 파라미터의 수를 줄이기 위해 사용
+   - 공간적인 불변성을 얻는 효과 
+
+`MAX Pooling` : filter 안에 가장 큰 값중 하나를 고르는 것
+![](/assets/image/2022-02-14-19-19-58.png)
+
+ > pooling은 겹치지 않는것이 일반적이다. <br/>
+  기본적으로 down sample이 목적이므로
+
+Q. Average Pooling vs Max Pooling
+ > 뉴런이 얼마나 활성되었는가를 표현하기엔 Max Pooling이 적합
+
+ 
