--- a/_posts/CS231n/2022-01-11-CS231n_4.md
+++ b/_posts/CS231n/2022-01-11-CS231n_4.md
@@ -10,7 +10,7 @@ toc : true
 toc_sticky: true
 comments: true
 ---
-
+신경망에 대하여 알아보자
 # Computational Graph
 지난 시간에 우리는 `Gradient Descent`에 대해 배웠다. <br/>
 `Gradient Descent`란 가장 loss가 낮은 곳을 찾기위한 방법이고 `optimization`을 위해<br/> 
